# reassembly_shape_editor

./: .gitignore  Cargo.toml  README.md  build_wasm.bat  build_wasm.sh
.github/workflows/: rust-build.yml
assets/: translations.json
src/: ast.rs  data_structures.rs  geometry.rs  lib.rs  lua_parser.rs  main.rs  mod.rs  parser.rs  project_generator.rs  serializer.rs  shape_editor.rs  translations.rs  ui.rs  visual.rs
tests/: lua_parser_tests.rs
web/: index.html
