[package]
name = "reassembly_shape_editor"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.18.0"
egui = "0.18.0"
glam = "0.24.0"
nom = "7.1.3"
rfd = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18.0"
console_error_panic_hook = "0.1.7"
full_moon = "1.2.0"
log = "0.4"
env_logger = "0.10.0"

# Add WebAssembly dependencies
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = [
    "Document",
    "Window",
    "Element", 
    "Location",
    "Storage",
    "console",
    "File",
    "FileList",
    "FileReader",
    "Blob",
    "HtmlInputElement",
    "Event",
    "EventTarget",
    "Url",
    "HtmlElement"
]}
js-sys = "0.3.64"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.37"
console_log = "0.2"
wee_alloc = "0.4.5"

[features]
default = []
wee_alloc = []

[lib]
crate-type = ["cdylib", "rlib"]